@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+
+    (c) https://github.com/MontiCore/monticore
+
+    The license generally applicable for this project
+    can be found under https://github.com/MontiCore/monticore.
+
+-->
 <!-- (c) https://github.com/MontiCore/monticore -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -24,17 +32,21 @@
         <module>report</module>
     </modules>
     <properties>
-    
+
         <!-- USE THIS VARIABLE TO SET THE VERSION OF THIS PROJECT AND ALL SUB PROJECTS -->
-        <revision>2.0.1-SNAPSHOT</revision>
-        
-        <commons.version>1.0.7</commons.version>
-        
+        <revision>2.0.2</revision>
+
+        <!-- USE THESE TO SET THE VERSIONS OF THE DEPENDENCIES FOR ALL THE SUB-PROJECTS -->
+        <commons.version>1.0.9</commons.version>
+        <controller.version>1.0.3</controller.version>
+        <server.version>1.0.7</server.version>
+        <rmimodelserver.version>1.1.3</rmimodelserver.version>
+
         <assembly.plugin>2.5.4</assembly.plugin>
         <compiler.plugin>3.3</compiler.plugin>
         <source.plugin>2.4</source.plugin>
 		<java.version>1.8</java.version>
-        <jacoco.plugin>0.8.1</jacoco.plugin>
+        <jacoco.plugin>0.8.2</jacoco.plugin>
     </properties>
     <!-- PROJECT DEPENDENCIES -->
     <dependencies>
@@ -71,7 +83,7 @@
         <dependency>
             <groupId>montisim</groupId>
             <artifactId>commons</artifactId>
-            <version>1.0.9</version>
+            <version>${commons.version}</version>
         </dependency>
 
     </dependencies>
@@ -151,6 +163,9 @@
                 <version>2.22.1</version>
                 <configuration>
                     <useSystemClassLoader>false</useSystemClassLoader>
+                    <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -193,7 +208,7 @@
                     </execution>
                 </executions>
             </plugin>
-            
+
             <!-- Flatten plugin: allow the use of the ${revision} property -->
             <plugin>
               <groupId>org.codehaus.mojo</groupId>
