@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+
+    (c) https://github.com/MontiCore/monticore
+
+    The license generally applicable for this project
+    can be found under https://github.com/MontiCore/monticore.
+
+-->
 <!-- (c) https://github.com/MontiCore/monticore -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -60,7 +68,7 @@
         <dependency>
             <groupId>org.siani.javafmi</groupId>
             <artifactId>fmu-wrapper</artifactId>
-            <version>2.24.0</version>
+            <version>LATEST</version>
         </dependency>
 
         <dependency>
@@ -123,8 +131,11 @@
                 <version>2.22.1</version>
                 <configuration>
                     <useSystemClassLoader>false</useSystemClassLoader>
-                    <!-- Set root directory to ensure same execution context in subprojects (e.g. for Log in test mode) -->
-                    <workingDirectory>${project.parent.basedir}</workingDirectory>
+                    <!-- Run the tests where the resources are located -->
+                    <workingDirectory>${project.basedir}/target/classes</workingDirectory>
+                    <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
                 </configuration>
             </plugin>
         </plugins>
